Category Tags fix and theme change errors on Safari

--- a/site/assets/css/common/header.css
+++ b/site/assets/css/common/header.css
@@ -243,11 +243,15 @@ border-bottom: 2px solid currentColor;
             .nav a {
                 width: auto;
             }
+            .menu-item {
+                display: none;
+            }
             ul .menu-item {
                 pointer-events: none;
             }
             .active-menu .menu-item {
                 pointer-events: auto;
+                display: block;
             }
             .logo {
                 display: flex;
