--- a/site/assets/css/common/terms.css
+++ b/site/assets/css/common/terms.css
@@ -1,9 +1,14 @@
 .terms-tags li {
     font-size: 16px;
     display: inline-block;
-    margin: 10px 10px 0px 0px;
+    margin: 10px 10px 0px 0px !important;
     font-weight: 500;
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.terms-tags li a {
+    display: block;
+    padding: 1px 10px 3px;
 }
 
 .terms-tags-start li {
@@ -12,6 +17,7 @@
     font-weight: 500;
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
+    width: auto;
 }
 
 .content-wrapper .terms-tags {
