--- a/site/assets/css/core/zmedia.css
+++ b/site/assets/css/core/zmedia.css
@@ -74,7 +74,7 @@
 @media screen and (max-width: 768px) {
     .page-header,
     .post-header {
-        margin: 10px auto calc(var(--content-gap)*1.5) auto;
+        margin: 40px auto calc(var(--content-gap)*1.5) auto;
     }
     .post-single,
     .content-wrapper {
